added example, fixed gas deploy, added env-config

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "DEVICE_HIVE_PLUGIN_WS_ENDPOINT": "",
-    "DEVICE_HIVE_AUTH_SERVICE_API_URL": "",
-    "DEVICE_HIVE_MAIN_SERVICE_API_URL": "",
+    "DEVICE_HIVE_PLUGIN_WS_ENDPOINT": "ws://playground.devicehive.com/plugin/proxy",
+    "DEVICE_HIVE_AUTH_SERVICE_API_URL": "http://playground.devicehive.com/auth/rest",
+    "DEVICE_HIVE_MAIN_SERVICE_API_URL": "http://playground.devicehive.com/api/rest",
     "PLUGIN_TOPIC": "",
-    "PLUGIN_TOKEN_LIFE_TIME_MIN": 30,
+    "PLUGIN_TOKEN_LIFE_TIME_MIN": 60,
     "USER_LOGIN": "",
     "USER_PASSWORD": "",
     "USER_ACCESS_TOKEN": "",
@@ -11,13 +11,5 @@
     "PLUGIN_ACCESS_TOKEN": "",
     "PLUGIN_REFRESH_TOKEN": "",
     "AUTO_SUBSCRIPTION_ON_START": true,
-    "SUBSCRIPTION_GROUP": "",
-
-    "CONTRACT_PATH": "",
-    "ETHEREUM_URL":"",
-    "CONTRACT_INITIAL_ARGS":["0"],
-    "ACCOUNT_ADDRESS":"",
-    "ACCOUNT_PASSWORD":"",
-    "CONTRACT_ADDRESS":"",
-    "ALLOWED_METHODS":[]
+    "SUBSCRIPTION_GROUP": ""
 }
