--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./index.js"
   },
   "author": "Grigoriy A.",
   "license": "Apache-2.0",
@@ -12,6 +12,7 @@
     "devicehive": "^2.0.3",
     "devicehive-plugin-core": "^1.1.4",
     "devicehive-proxy-message": "^1.0.11",
+    "json-evn-configurator": "^1.0.6",
     "solc": "^0.4.24",
     "web3": "^1.0.0-beta.34"
   }
